force-app/main/default/objects/Account/fields/Account_Comments__c.field-meta.xml
<CustomField>
    <fullName>Account_Comments__c</fullName>
    <description>To clarify type or segment for a specific Account; to record interactions with account reps.</description>
    <inlineHelpText>Use this text box to further clarify the type or the segment and to record any interactions with account reps.</inlineHelpText>
    <label>Account Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>