force-app/main/default/objects/Account/fields/BIAV_Total_HSC_Gifts__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Total_HSC_Gifts__c</fullName>
    <description>Total Hard Soft Credit Gifts.  System field: do not change. Updated by automatic processes.</description>
    <inlineHelpText>Total Hard Soft Credit Gifts.  System field: do not change. Updated by automatic processes.</inlineHelpText>
    <label>Total HSC Gifts</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>