force-app/main/default/objects/Account/fields/BIAV_Total_HSC_Gifts_Last_N_Days__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Total_HSC_Gifts_Last_N_Days__c</fullName>
    <description>Hard Soft Credit Gitfs N days back</description>
    <inlineHelpText>Hard Soft Credit Gitfs N days back</inlineHelpText>
    <label>Total HSC Gifts Last N Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>