force-app/main/default/objects/Account/fields/BIAV_Total_HSC_Gifts_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Total_HSC_Gifts_Last_Year__c</fullName>
    <description>Hard Soft Credit gift amount in Last Year</description>
    <inlineHelpText>Hard Soft Credit gift amount in Last Year</inlineHelpText>
    <label>Total HSC Gifts Last Year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>