force-app/main/default/objects/Account/fields/BIAV_Total_HSC_Gifts_This_Year__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Total_HSC_Gifts_This_Year__c</fullName>
    <description>Total of Hard Soft Credit Gifts this Fiscal Year</description>
    <inlineHelpText>Total of Hard Soft Credit Gifts this Fiscal Year</inlineHelpText>
    <label>Total HSC Gifts This Year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>