force-app/main/default/objects/Account/fields/BIAV_Total_HSC_Gifts_Two_Years_Ago__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Total_HSC_Gifts_Two_Years_Ago__c</fullName>
    <description>Total of Hard Soft Credit gifts two fiscal years ago</description>
    <inlineHelpText>Total of Hard Soft Credit gifts two fiscal years ago</inlineHelpText>
    <label>Total HSC Gifts Two Years Ago</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>