force-app/main/default/objects/Account/fields/BIAV_Total_Number_of_HSC_Gifts__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Total_Number_of_HSC_Gifts__c</fullName>
    <description>Total number of Hard Soft Credit Gifts all time</description>
    <inlineHelpText>Total number of Hard Soft Credit Gifts all time</inlineHelpText>
    <label>Total Number of HSC Gifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>