force-app/main/default/objects/Account/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <label>Segmentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Member</fullName>
                <label>Business/Advocacy Member</label>
            </value>
            <value>
                <fullName>Conference Exhibitor</fullName>
            </value>
            <value>
                <fullName>Conference Sponsor</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Golf Sponsor</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Legacy Dinner Sponsor</fullName>
            </value>
            <value>
                <fullName>Organizational Sponsor</fullName>
            </value>
            <value>
                <fullName>Vendor/Business</fullName>
            </value>
            <value>
                <fullName>Volunteer Group</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Community Partner</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>