force-app/main/default/objects/Account/listViews/Account_types_clean_up.listView-meta.xml
<ListView>
    <fullName>Account_types_clean_up</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization</value>
    </filters>
    <label>Organization Account Record Type cleanup</label>
</ListView>