force-app/main/default/objects/Account/listViews/Accounts_and_segmentation.listView-meta.xml
<ListView>
    <fullName>Accounts_and_segmentation</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Segmentation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization</value>
    </filters>
    <filters>
        <field>Segmentation__c</field>
        <operation>equals</operation>
        <value>Golf Sponsor</value>
    </filters>
    <label>Accounts and segmentation</label>
</ListView>